fix: spacing

--- a/theme/style.css
+++ b/theme/style.css
@@ -33,6 +33,7 @@ aside img {
 aside {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: stretch;
     gap: 2rem;
     color: #ddd;
@@ -44,10 +45,12 @@ aside {
 main {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: stretch;
     gap: 2rem;
     flex-grow: 1;
     padding-top: 3rem;
+    padding-bottom: 2rem;
     color: #1f1f23;
 }
 
@@ -60,7 +63,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    gap: 1.5rem;
+    gap: 1rem;
 }
 
 main section {
@@ -99,7 +102,7 @@ h2 {
 
 h3 {
     border-bottom: 1px solid;
-    padding-bottom: 1rem;
+    padding-bottom: .5rem;
     font-weight: 600;
     font-size: 1rem;
 }
@@ -180,7 +183,6 @@ a {
 }
 
 .details {
-    margin-top: auto;
     gap: 0;
 }
 
